# nightfury

./: .gitignore  Cargo.toml  README.md  REAMDE.md  cargo_ignore_errors.sh  js.ebnf  sql.ebnf
.github/workflows/: main_check.yml  rust.yml  rust_main.yml
nightfury/: Cargo.toml
nightfury-cli/: Cargo.toml
nightfury-cli/src/: main.rs
nightfury-nvim/lua/: nightfury-nvim.lua
nightfury-server/: Cargo.toml  Protocol.md
nightfury-server/src/: main.rs
nightfury-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
nightfury-vscode/src/: extension.ts
nightfury/benches/: fsm_gen.rs
nightfury/src/: esc_seq.rs  frontend.rs  fsm.rs  lib.rs  main.rs  protocol.rs  server.rs
src/: frontend.rs  fsm.rs  lib.rs  main.rs  protocol.rs
