[package]
name = "nightfury"
description = "(DRAFT) toothless is here to help you write code blazingly fast"
license = "GPL-3.0-only"
repository = "https://github.com/mageOfStructs/nightfury"
version = "0.2.0"
edition = "2024"
default-run = "bin"

[dependencies]
console = "0.15.11"
debug_print = "1.0.0"
regex = "1.11.1"
ebnf = "0.1.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-binary = "0.5.0"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[features]
thread-safe = []
